# docs/swagger.yaml
@@ -951,7 +951,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/models.DictType'
+          $ref: '#/definitions/models.SysConfig'
       responses:
         "200":
           description: '{"code": -1, "message": "添加失败"}'
@@ -959,9 +959,9 @@ paths:
             type: string
       security:
       - Bearer: []
-      summary: 添加字典数据
+      summary: 添加配置
       tags:
-      - 字典数据
+      - 配置
     put:
       consumes:
       - application/json
@@ -1541,6 +1541,26 @@ paths:
       summary: 获取当前净值
       tags:
       - 企业网站接口
+  /api/v1/netWorth/list:
+    get:
+      description: 获取当前净值列表
+      parameters:
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.NetWorth'
+      responses:
+        "200":
+          description: '{"code": 200, "data": "list":[...]}'
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - Bearer: []
+      summary: 获取净值列表
+      tags:
+      - 企业网站接口
   /api/v1/operlog:
     post:
       consumes:
@@ -1891,7 +1911,7 @@ paths:
       summary: 删除用户菜单数据
       tags:
       - 角色菜单
-  /api/v1/send_code:
+  /api/v1/sendCode:
     get:
       parameters:
       - description: 手机号
